# retinanet-examples

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.deepstream  INFERENCE.md  LICENSE  README.md  TRAINING.md  setup.py
.github/ISSUE_TEMPLATE/: issue.md  nvidia-odtk-issue.md
csrc/: calibrator.h  engine.cpp  engine.h  engine_rotate.cpp  engine_rotate.h  extensions.cpp
csrc/cuda/: decode.cu  decode.h  decode_rotate.cu  decode_rotate.h  iou.cu  iou.h  nms.cu  nms.h  nms_iou.cu  nms_iou.h  nms_rotate.cu  nms_rotate.h  utils.h
csrc/plugins/: DecodePlugin.h  DecodeRotatePlugin.h  NMSPlugin.h  NMSRotatePlugin.h
extras/: test.sh
extras/cppapi/: CMakeLists.txt  README.md  export.cpp  generate_anchors.py  infer.cpp  infervideo.cpp
extras/deepstream/: README.md
extras/deepstream/deepstream-sample/: CMakeLists.txt  ds_config_1vid.txt  ds_config_8vid.txt  infer_config_batch1.txt  infer_config_batch8.txt  nvdsparsebbox_retinanet.cpp
extras/video-object-detection-data-tools/: .gitignore  README.md  prepare_video_datasets.py  read_dataset_davis.py  read_dataset_imagenet_vid.py
odtk/: __init__.py  box.py  dali.py  infer.py  loss.py  main.py  model.py  train.py  utils.py
odtk/backbones/: fpn.py  layers.py  mobilenet.py  resnet.py
retinanet/: box.py  dali.py  data.py  infer.py  infer_rot.py  loss.py  main.py  model.py  train.py  train_rot.py  utils.py
retinanet/backbones/: __init__.py  fpn.py  layers.py  mobilenet.py  resnet.py  utils.py
